--- a/review1.html
+++ b/review1.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <!-- Required meta tags always come first -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css"
+<!-- saved from url=(0121)https://coursera-assessments.s3.amazonaws.com/assessments/1597747938409/313dd412-d0f8-4642-85d5-2a2587f4478c/aboutus.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+     <!-- Required meta tags always come first -->
+     
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <meta http-equiv="x-ua-compatible" content="ie=edge">
+ 
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="./review1_files/bootstrap.min.css">
+     <link rel="stylesheet" href="./review1_files/styles.css">
 
     <title>Ristorante Con Fusion: About Us</title>
 
@@ -32,26 +30,26 @@
     </header>
 
     <div class="container">
-        <div class="row">
-            <div class="col-12 col-sm-12">
+        <div>
+            <div>
                <h3>About Us</h3>
                <hr>
             </div>
         </div>
 
-        <div class="row row-content">
+        <div class="row row-content align-items-center">
             <div class="col-12 col-sm-6">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
-            <div>
+            <div class="col-12 col-sm-6">
             </div>
         </div>
 
 
-        <div class="row row-content">
-            <div class="col-12 col-sm-12">
+        <div class="row row-content align-items-center">
+            <div class="col-12">
                 <h2>Corporate Leadership</h2>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <p class="d-none d-sm-block">Our CEO, Peter, credits his hardworking East Asian immigrant parents who undertook the arduous journey to the shores of America with the intention of giving their children the best future. His mother's wizardy in the kitchen whipping up the tastiest dishes with whatever is available inexpensively at the supermarket, was his first inspiration to create the fusion cuisines for which <em>The Frying Pan</em> became well known. He brings his zeal for fusion cuisines to this restaurant, pioneering cross-cultural culinary connections.</p>
@@ -72,10 +70,10 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="https://coursera-assessments.s3.amazonaws.com/assessments/1597747938409/313dd412-d0f8-4642-85d5-2a2587f4478c/aboutus.html#">Home</a></li>
+                        <li><a href="https://coursera-assessments.s3.amazonaws.com/assessments/1597747938409/313dd412-d0f8-4642-85d5-2a2587f4478c/aboutus.html#">About</a></li>
+                        <li><a href="https://coursera-assessments.s3.amazonaws.com/assessments/1597747938409/313dd412-d0f8-4642-85d5-2a2587f4478c/aboutus.html#">Menu</a></li>
+                        <li><a href="https://coursera-assessments.s3.amazonaws.com/assessments/1597747938409/313dd412-d0f8-4642-85d5-2a2587f4478c/aboutus.html#">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5">
@@ -107,12 +105,13 @@
            </div>
         </div>
     </footer>
-
+    
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
-    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./review1_files/jquery.slim.min.js.download"></script>
+    <script src="./review1_files/popper.min.js.download"></script>
+    <script src="./review1_files/bootstrap.min.js.download"></script>
 
-</body>
 
-</html>
+
+
+</body></html>
