--- a/contactus.html
+++ b/contactus.html
@@ -95,19 +95,19 @@
             <div class="col-12 col-md-9">
                 <form>
                     <div class="form-group row">
-                        <label for="firstname" class="col-md-2 col-form-laber">First Name</label>
+                        <label for="firstname" class="col-md-2 col-form-label">First Name</label>
                         <div class="col-md-10">
                             <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="lastname" class="col-md-2 col-form-laber">Last Name</label>
+                        <label for="lastname" class="col-md-2 col-form-label">Last Name</label>
                         <div class="col-md-10">
                             <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name">
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="telnum" class="col-12 col-md-2 col-form-laber">Contact Tel.</label>
+                        <label for="telnum" class="col-12 col-md-2 col-form-label">Contact Tel.</label>
                         <div class="col-5 col-md-3">
                             <input type="tel" class="form-control" id="areacode" name="areacode" placeholder="Area Code">
                         </div>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label for="emailid" class="col-md-2 col-form-laber">E-mail</label>
+                        <label for="emailid" class="col-md-2 col-form-label">E-mail</label>
                         <div class="col-md-10">
                             <input type="email" class="form-control" id="emailid" name="emailid" placeholder="E-mail">
                         </div>
@@ -125,7 +125,7 @@
                         <div class="col-md-6 offset-md-2">
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" name="approve" id="approve" value="">
-                                <label class="form-checklabel" for="approve"><strong>May we contact you?</strong></label>
+                                <label class="form-check-label" for="approve"><strong>May we contact you?</strong></label>
                             </div>
                         </div>
                         <div class="col-md-3 offset-md-1">
