--- a/index.html
+++ b/index.html
@@ -86,15 +86,101 @@
                     <img src="images/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a href="#bookingform" role="button" class="btn btn-warning"
-                       data-toggle="tooltip" data-html="true"
-                    title="Or Call us at<br><strong>+852 1234567</strong>" data-placement="bottom">
+                    <a href="#bookingform" role="button" class="btn btn-warning" data-toggle="modal" data-target="#reserveModal">
                         Reserve Table
                     </a>
                 </div>
             </div>
         </div>
     </header>
+
+
+
+
+
+
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times
+                    </button>
+                </div>
+                <div class="modal-body">
+                             <form>
+                                <div class="form-group row">
+                                    <label class="col-12 col-sm-2 col-form-label">Number of Guests</label>
+                                    <div class="col-12 col-sm-10">
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="1guest" name="guestnum" value="1">
+                                            <label for="1guest" class="form-check-label"> 1 </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="2guest" name="guestnum" value="2">
+                                            <label for="2guest" class="form-check-label"> 2 </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="3guest" name="guestnum" value="3">
+                                            <label for="3guest" class="form-check-label"> 3 </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="4guest" name="guestnum" value="4">
+                                            <label for="4guest" class="form-check-label"> 4 </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                             <input type="radio" class="form-check-input" id="5guest" name="guestnum" value="5">
+                                            <label for="5guest" class="form-check-label"> 5 </label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input type="radio" class="form-check-input" id="6guest" name="guestnum" value="6">
+                                            <label for="6guest" class="form-check-label"> 6 </label>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                 <div class="form-group row">
+                                     <label class="col-12 col-sm-2 col-form-label">Section</label>
+                                     <div class="col-sm-6 col-sm-2">
+                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                            <label class="btn btn-success active">
+                                                <input type="radio" name="section" id="nonsmoking" autocomplete="off" checked>Non Smoking
+                                            </label>
+                                            <label class="btn btn-danger">
+                                                <input type="radio" name="section" id="smoking" autocomplete="off">Smoking
+                                            </label>
+                                        </div>
+                                     </div>
+                                 </div>
+
+                                <div class="form-group row">
+                                    <label class="col-12 col-sm-2 col-form-label">Date and Time</label>
+                                    <div class="col-12 col-sm-5">
+                                        <input class="form-control" type="date" id="date" name="date" placeholder="Date">
+                                    </div>
+                                    <div class="col-12 col-sm-5">
+                                        <input class="form-control" type="time" id="time" name="time" placeholder="Time">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-sm-4 offset-sm-2">
+                                        <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                                        <button class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>
+                             </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
 
     <div class="container">
         <div class="row row-content">
@@ -135,59 +221,9 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
-                </div>
-            </div>
-        </div>
-        <div class="row row-content">
-            <div class="col-12 col-sm-8 offset-sm-2">
-                <div class="card" id="bookingform">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group row">
-                                <label class="col-12 col-sm-2 col-form-label">Number of Guests</label>
-                                <div class="col-12 col-sm-10">
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="1guest" name="guestnum" value="1">
-                                        <label for="1guest" class="form-check-label"> 1 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="2guest" name="guestnum" value="2">
-                                        <label for="2guest" class="form-check-label"> 2 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="3guest" name="guestnum" value="3">
-                                        <label for="3guest" class="form-check-label"> 3 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="4guest" name="guestnum" value="4">
-                                        <label for="4guest" class="form-check-label"> 4 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                         <input type="radio" class="form-check-input" id="5guest" name="guestnum" value="5">
-                                        <label for="5guest" class="form-check-label"> 5 </label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input type="radio" class="form-check-input" id="6guest" name="guestnum" value="6">
-                                        <label for="6guest" class="form-check-label"> 6 </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label class="col-12 col-sm-2 col-form-label">Date and Time</label>
-                                <div class="col-12 col-sm-5">
-                                    <input class="form-control" type="date" id="date" name="date" placeholfer="Date">
-                                </div>
-                                <div class="col-12 col-sm-5">
-                                    <input class="form-control" type="time" id="time" name="time" placeholder="Time">
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col-2 offset-sm-2">
-                                    <button class="btn btn-primary">Reserve</button>
-                                </div>
-                            </div>
-                        </form>
+                    <div class="btn-group" id="carouselbuttons">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause"><span class="fa fa-pause"></span></button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play"><span class="fa fa-play"></span></button>
                     </div>
                 </div>
             </div>
@@ -240,11 +276,19 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
     <script>
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
+        $(document).ready(function(){
+            $("#mycarousel").carousel( { interval: 1000 } );
+            $("#carousel-pause").click(function(){
+                $("#mycarousel").carousel('pause');
+            });
+            $("#carousel-play").click(function(){
+                $("#mycarousel").carousel('cycle');
+            });
         });
     </script>
+
 
 </body>
 
